# web-DTE-RUST-SVELTE

.claude/: settings.json
consolidation-artifacts/: implementation-decisions.md  phase-1-consolidation.md  phase-2-consolidation.md  ui-style-guide.md
docs/: workflow-changelog.md
prototype-code/backend/: .env.example  Cargo.toml
prototype-code/backend/.sqlx/: query-135fce5f5dcddb45c2b4f8b300813d41b9dbc7a233b90dff5d59403ac6e9febc.json  query-b5ee8d8864102350dbf40b44620c96cab41a34e784e126003ce73e9c0cd6fead.json  query-eda74347d3f30678e10e8cda2f2ce32bb4d12a9432f7ae86dd9820cc0316e20a.json
prototype-code/backend/migrations/: 0001_initial.sql
prototype-code/backend/src/: config.rs  main.rs
prototype-code/backend/src/adapters/inbound/: errors.rs  mod.rs  routes.rs
prototype-code/backend/src/adapters/inbound/data_transfer_objects/: mod.rs  user_data_transfer_object.rs
prototype-code/backend/src/adapters/inbound/handlers/: health_handler.rs  user_handler.rs
prototype-code/backend/src/adapters/inbound/middleware/: mod.rs
prototype-code/backend/src/adapters/outbound/: errors.rs
prototype-code/backend/src/adapters/outbound/repositories/: user_repository_impl.rs
prototype-code/backend/src/domain/: errors.rs
prototype-code/backend/src/domain/entities/: user.rs
prototype-code/backend/src/domain/ports/inbound/: create_account_use_case.rs  mod.rs
prototype-code/backend/src/domain/ports/outbound/: user_repository.rs
prototype-code/backend/src/domain/services/: create_account_use_case_impl.rs  mod.rs
prototype-code/backend/tests/: health_test.rs
(+37 files in other folders)
