[package]
name = "dte-auto-upload"
version = "0.1.0"
edition = "2021"

[lib]
name = "dte_auto_upload"
path = "src/lib.rs"

[[bin]]
name = "dte-auto-upload"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9"
argon2 = "0.5"
aes-gcm = "0.10"
chrono = "0.4.44"

[dev-dependencies]
axum-test = "19"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
